--- a/emacs.org
+++ b/emacs.org
@@ -725,13 +725,16 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (defvar swift-command-map
   (let ((map (make-keymap)))
     ;; movement
-    (define-key map (kbd "i") 'swift-up)
-    (define-key map (kbd "k") 'swift-down)
+    (define-key map (kbd "i") 'swift-2-up)
+    (define-key map (kbd "k") 'swift-2-down)
+
+    (define-key map (kbd "o") 'swift-up)
+    (define-key map (kbd "l") 'swift-down)
+
     (define-key map (kbd "p") 'beginning-of-defun)
     (define-key map (kbd "n") 'end-of-defun)
 
-    (define-key map (kbd "o") 'swift-2-up)
-    (define-key map (kbd "l") 'swift-2-down)
+
 
     (define-key map (kbd "u") 'cua-scroll-down)
     (define-key map (kbd "j") 'cua-scroll-up)
