--- a/emacs.org
+++ b/emacs.org
@@ -74,17 +74,21 @@
 (customize-set-variable 'tool-bar-mode nil)
 
 (custom-set-variables
- '(custom-enabled-themes (quote (wombat)))
  '(custom-safe-themes
    (quote
-    ("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
-     "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
+	("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
+	 "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
  )
 
 ;; Terminal displays are often not happy about certain colours, so we only set them if we are running
 ;; within a graphic display environment
 (if (display-graphic-p)
     (progn
+
+      (custom-set-variables
+       '(custom-enabled-themes (quote (wombat)))
+       )
+
       (custom-set-faces
        '(default ((t (:background "#101515"))))
        '(cursor ((t (:background "OrangeRed"))))
@@ -114,10 +118,11 @@
        ((string-equal system-type "gnu/linux")
         (set-frame-font "Monospace-10")))
 
+      (global-hl-line-mode t)
 
       ))
 
-(global-hl-line-mode t)
+
 (sml/setup)
 
 #+END_SRC
