--- a/emacs.org
+++ b/emacs.org
@@ -27,9 +27,11 @@
 
 (defvar package-list
   '(
+    ag
     company
     haskell-mode
     helm
+    helm-ag
     helm-c-yasnippet
     helm-descbinds
     helm-projectile
