--- a/emacs.org
+++ b/emacs.org
@@ -495,7 +495,7 @@
 
 ;; Semantic currently fails to populate imenu when editing certain .c files (ahem, linux kernel).
 ;; I should probably investigate why that fails.
-(semantic-mode t)
+;; (semantic-mode t)
 
 (which-function-mode 1)
 (custom-set-faces '(which-func ((t (:foreground "LightSlateBlue")))))
@@ -606,7 +606,7 @@
 (define-key org-mode-map (kbd "C-j") 'helm-mini)
 (define-key lisp-interaction-mode-map (kbd "C-j") 'helm-mini)
 
-(define-key control-semi-map (kbd "C-s") 'helm-semantic-or-imenu)
+(define-key control-semi-map (kbd "C-s") 'helm-imenu)
 
 (define-key control-semi-map (kbd "l") 'helm-M-x)
 (define-key control-semi-map (kbd "o") 'swiper-helm)
