--- a/emacs.org
+++ b/emacs.org
@@ -28,7 +28,7 @@
 (defvar package-list
   '(
     ag
-    ;; company
+    company
     ggtags
     haskell-mode
     helm
@@ -121,10 +121,8 @@
 
       (global-hl-line-mode t)
 
+      (sml/setup)
       ))
-
-
-(sml/setup)
 
 #+END_SRC
 
@@ -132,11 +130,6 @@
 #+BEGIN_SRC emacs-lisp
 (require 'uniquify)
 (setq uniquify-buffer-name-style 'forward)
-#+END_SRC
-
-** fringe
-#+BEGIN_SRC emacs-lisp
-;; (fringe-mode '(4 . 8)) ;; make left fringe half size
 #+END_SRC
 
 * BEHAVIOUR
@@ -419,16 +412,16 @@
 
 ** company
 #+begin_src emacs-lisp
-;; (require 'company)
-;; (global-company-mode t)
+(require 'company)
+(global-company-mode t)
 
-;; (add-to-list 'company-backends '(company-dabbrev))
+(add-to-list 'company-backends '(company-dabbrev))
 
-;; (define-key company-active-map (kbd "C-n") #'company-select-next)
-;; (define-key company-active-map (kbd "C-p") #'company-select-previous)
+(define-key company-active-map (kbd "C-n") #'company-select-next)
+(define-key company-active-map (kbd "C-p") #'company-select-previous)
 
-;; (define-key control-semi-map (kbd "n") 'company-complete)
-;; (define-key control-semi-map (kbd "C-n") 'dabbrev-expand)
+(define-key control-semi-map (kbd "n") 'company-complete)
+(define-key control-semi-map (kbd "C-n") 'dabbrev-expand)
 
 #+end_src
 
@@ -768,6 +761,7 @@
     )
   )
 #+end_src
+
 ** custom
 #+begin_src emacs-lisp
 
