--- a/emacs.org
+++ b/emacs.org
@@ -504,6 +504,9 @@
 ;; I should probably investigate why that fails.
 ;; (semantic-mode t)
 
+;; Make the interface a bit more snappy
+(setq idle-update-delay 0.1)
+
 (which-function-mode 1)
 (custom-set-faces '(which-func ((t (:foreground "LightSlateBlue")))))
 
