.cc and .hh will now be opened with c-mode and c++-mode respectively

--- a/emacs.org
+++ b/emacs.org
@@ -620,8 +620,10 @@
         ("\\.hs$" . haskell-mode)
         ("\\.py\\'" . python-mode)
         ("\\.c\\'" . c-mode)
+        ("\\.cc\\'" . c-mode)
         ("\\.cpp\\'" . c++-mode)
         ("\\.h\\'" . c++-mode)
+        ("\\.hh\\'" . c++-mode)
         ("\\.java\\'" . java-mode)
         ("\\.s\\'" . c++-mode)
         ("\\.mc\\'" . c++-mode)
