--- a/emacs.org
+++ b/emacs.org
@@ -123,12 +123,7 @@
          ((member "Consolas-10" (font-family-list))
           (set-frame-font "Consolas-10"))))
        ((string-equal system-type "gnu/linux")
-       (cond 
-       ((member "ProggyCleanTT" (font-family-list))
-       (set-frame-font "ProggyCleanTT-12"))
-       ((member "Monospace" (font-family-list))
-       (set-frame-font "Monospace-12"))
-       )))
+        (set-frame-font "Monospace-10")))
 
       (global-hl-line-mode t)
 
