--- a/emacs.org
+++ b/emacs.org
@@ -87,6 +87,46 @@
 	 "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
  )
 
+;; TODO: handle when mode == "4k"
+(defun set-windows-font (mode) 
+  (cond
+   ((member "ProggyClean" (font-family-list))
+	(set-frame-font "ProggyClean"))
+   ((member "Consolas-10" (font-family-list))
+	(set-frame-font "Consolas-10")))
+
+  )
+
+(defun set-linux-font (mode) 
+  (cond
+   ((string= mode "normal") (set-frame-font "Monospace-10"))
+   ((string= mode "4k") (set-frame-font "Monospace-18"))
+   ))
+
+(defun set-font (mode)
+  (cond
+   ((string-equal system-type "windows-nt")
+	;; We are dealing with Windows sytem
+    (set-windows-font mode))
+   ((string-equal system-type "gnu/linux")
+	;; We are dealing with linux system:
+    (set-linux-font mode)
+    )))
+
+
+;; Sets font size to something that's usable under 4k monitor
+(defun set-font-4k ()
+  (interactive)
+  (set-font "4k")
+  )
+
+;; Sets font size to something that's usable under 4k monitor
+(defun set-font-normal ()
+  (interactive)
+  (set-font "normal")
+  )
+
+
 ;; Terminal displays are often not happy about certain colours, so we only set them if we are running
 ;; within a graphic display environment
 (if (display-graphic-p)
@@ -115,15 +155,7 @@
        '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif"))))
        )
 
-      (cond
-       ((string-equal system-type "windows-nt")
-        (cond
-         ((member "ProggyClean" (font-family-list))
-          (set-frame-font "ProggyClean"))
-         ((member "Consolas-10" (font-family-list))
-          (set-frame-font "Consolas-10"))))
-       ((string-equal system-type "gnu/linux")
-        (set-frame-font "Monospace-10")))
+      (set-font-normal)
 
       (global-hl-line-mode t)
 
@@ -909,4 +941,10 @@
 (defalias 'obr 'org-babel-reload-emacs-org)
 
 (message "emacs.org : done loading!")
+
+  (defadvice text-scale-increase (around all-buffers (arg) activate)
+    (dolist (buffer (buffer-list))
+      (with-current-buffer buffer
+        ad-do-it)))
+
 #+end_src
