--- a/emacs.org
+++ b/emacs.org
@@ -126,14 +126,15 @@
   (set-font "normal")
   )
 
-;; (defun set-font () 
-;; (interactive)
-;; todo: look at these and desice which mode do we need
-;; (x-display-pixel-width)
-;; (x-display-pixel-height)
 
-;; )
+(defun is-4k-monitor ()
+  (and (<= 2840 (x-display-pixel-width)) (<= 2160 (x-display-pixel-height))))
 
+(defun set-font-for-current-resolution () 
+  (interactive)
+  (cond
+   ((is-4k-monitor) (set-font-4k))
+   (t (set-font-normal))))
 
 ;; Terminal displays are often not happy about certain colours, so we only set them if we are running
 ;; within a graphic display environment
@@ -163,7 +164,7 @@
        '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif"))))
        )
 
-      (set-font-normal)
+      (set-font-for-current-resolution)
 
       (global-hl-line-mode t)
 
@@ -584,6 +585,11 @@
   (dolist (buffer (buffer-list))
     (with-current-buffer buffer
       ad-do-it)))
+
+
+;; UNCOMMENT THIS TO INVESTIGATE CRASHES
+;; (setq debug-on-error t)
+
 #+end_src
 
 ** Programming
