--- a/emacs.org
+++ b/emacs.org
@@ -83,48 +83,43 @@
 (custom-set-variables
  '(custom-safe-themes
    (quote
-	("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
-	 "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
- )
+    ("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
+     "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default))))
 
 (defun set-windows-font (mode) 
   (cond
-   ((string= mode "normal") ((cond
-							  ((member "ProggyClean" (font-family-list))
-							   (set-frame-font "ProggyClean"))
-							  ((member "Consolas-10" (font-family-list))
-							   (set-frame-font "Consolas-10"))
-							  )))
+   ((string= mode "normal") (cond
+                             ((member "ProggyClean" (font-family-list))
+                              (set-frame-font "ProggyClean"))
+                             ((member "Consolas-10" (font-family-list))
+                              (set-frame-font "Consolas-10"))
+                             ))
    ((string= mode "4k") (set-frame-font "Consolas-12"))))
 
 (defun set-linux-font (mode) 
   (cond
    ((string= mode "normal") (set-frame-font "Monospace-10"))
-   ((string= mode "4k") (set-frame-font "Monospace-16"))
-   ))
+   ((string= mode "4k") (set-frame-font "Monospace-16"))))
 
 (defun set-font (mode)
   (cond
    ((string-equal system-type "windows-nt")
-	;; We are dealing with Windows sytem
+    ;; We are dealing with Windows sytem
     (set-windows-font mode))
    ((string-equal system-type "gnu/linux")
-	;; We are dealing with linux system:
-    (set-linux-font mode)
-    )))
+    ;; We are dealing with linux system:
+    (set-linux-font mode))))
 
 
 ;; Sets font size to something that's usable under 4k monitor
 (defun set-font-4k ()
   (interactive)
-  (set-font "4k")
-  )
+  (set-font "4k"))
 
 ;; Default font size
 (defun set-font-normal ()
   (interactive)
-  (set-font "normal")
-  )
+  (set-font "normal"))
 
 
 (defun is-4k-monitor ()
@@ -160,8 +155,7 @@
        '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
        '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
        '(helm-ff-directory ((t :inherit helm-buffer-directory )))
-       '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif"))))
-       )
+       '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif")))))
 
       (set-font-for-current-resolution)
 
@@ -437,37 +431,37 @@
 
   ;; Taken from: https://github.com/aculich/.emacs.d/blob/master/init.el
   (when (or (memq system-type '(gnu gnu/linux))
-	    (string= (file-name-nondirectory insert-directory-program) "gls"))
+        (string= (file-name-nondirectory insert-directory-program) "gls"))
     ;; If we are on a GNU system or have GNU ls, add some more `ls' switches:
     ;; `--group-directories-first' lists directories before files, and `-v'
     ;; sorts numbers in file names naturally, i.e. "image1" goes before
     ;; "image02"
     (setq dired-listing-switches
-	  (concat dired-listing-switches " --group-directories-first -v")))
+      (concat dired-listing-switches " --group-directories-first -v")))
 
 
   (defun open-in-external-app ()
     "Open the current file or dired marked files in external app."
     (interactive)
     (let ( doIt
-	   (myFileList
-	    (cond
-	     ((string-equal major-mode "dired-mode") (dired-get-marked-files))
-	     (t (list (buffer-file-name))) ) ) )
+       (myFileList
+        (cond
+         ((string-equal major-mode "dired-mode") (dired-get-marked-files))
+         (t (list (buffer-file-name))) ) ) )
 
       (setq doIt (if (<= (length myFileList) 5)
-		     t
-		   (y-or-n-p "Open more than 5 files?") ) )
+             t
+           (y-or-n-p "Open more than 5 files?") ) )
 
       (when doIt
-	(cond
-	 ((string-equal system-type "windows-nt")
-	  (mapc (lambda (fPath) (w32-shell-execute "open" (replace-regexp-in-string "/" "\\" fPath t t)) ) myFileList)
-	  )
-	 ((string-equal system-type "darwin")
-	  (mapc (lambda (fPath) (shell-command (format "open \"%s\"" fPath)) )  myFileList) )
-	 ((string-equal system-type "gnu/linux")
-	  (mapc (lambda (fPath) (let ((process-connection-type nil)) (start-process "" nil "xdg-open" fPath)) ) myFileList) ) ) ) ) )
+    (cond
+     ((string-equal system-type "windows-nt")
+      (mapc (lambda (fPath) (w32-shell-execute "open" (replace-regexp-in-string "/" "\\" fPath t t)) ) myFileList)
+      )
+     ((string-equal system-type "darwin")
+      (mapc (lambda (fPath) (shell-command (format "open \"%s\"" fPath)) )  myFileList) )
+     ((string-equal system-type "gnu/linux")
+      (mapc (lambda (fPath) (let ((process-connection-type nil)) (start-process "" nil "xdg-open" fPath)) ) myFileList) ) ) ) ) )
 
 #+end_src
 
@@ -607,13 +601,13 @@
   )
 
 (add-hook 'c-mode-common-hook
-		  (lambda()
-			;; Use C++ style comments
-			(setq comment-start "//"
-				  comment-end   "")
+          (lambda()
+            ;; Use C++ style comments
+            (setq comment-start "//"
+                  comment-end   "")
 
-			;; Automagically adds spaces between symbols like + > < etc...
-			(electric-spacing-mode t)))
+            ;; Automagically adds spaces between symbols like + > < etc...
+            (electric-spacing-mode t)))
 #+end_src
 
 *** Python
