.cmd files will be treated as windows batch files

--- a/emacs.org
+++ b/emacs.org
@@ -664,6 +664,7 @@
         ("\\.scm\\'" . scheme-mode)
         ("\\.rs\\'" . rust-mode)
         ("\\.pm\\'" . perl-mode)
+        ("\\.cmd\\'" . bat-mode)
         ))
 #+end_src
 
